--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,7 +31,7 @@ html{
             .slick-list{
                 .slick-track{
                     .sl_slide-1, .sl_slide-2, .sl_slide-3 {
-                        background: url(../img/background.png);
+
                         background-repeat: no-repeat;
                         height: 100vh;
                         background-size: cover; 
@@ -40,6 +40,18 @@ html{
                             max-height:239px;
                         }
                     }
+                    }
+                    .sl_slide-1{
+                        background: url(../img/bckg2.jpg);
+                        background-position: bottom;
+                    }
+                    .sl_slide-2{
+                        background: url(../img/background.png);
+                        background-position: bottom;
+                    }
+                    .sl_slide-3{
+                        background: url(../img/bckg3.jpg);
+                        background-position: bottom;
                     }
                 }
 
